--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,12 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
+import Layout from '../layouts/Layout.astro';
+import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-  <main>
-    <Card title="Common data">
-		Graph data
-    </Card>
-  </main>
+<Layout title="CSS data analysis - About">
+  <Card title="Common data">Graph data</Card>
 </Layout>
 
 <style>
-  main {
-    margin: auto;
-    padding: 1.5rem;
-    max-width: 60vw;
-  }
+  
 </style>
