--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Content from '../components/Content.astro';
 ---
 
-<Layout title="CSS data analysis - About">
-  <Card title="Common data">Graph data</Card>
+<Layout title="About">
+  <Content title="About">
+    <p>
+      <b>CSS data analysis</b> is a small hackathon research project, studying and
+      visualizing CSS data from multiple library releases throughout almost 3
+      years.
+    </p>
+  </Content>
 </Layout>
 
-<style>
-  
-</style>
+<style></style>
