--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 export interface Props {
   class?: string;
-  title: string;
+  title?: string;
 }
 
 const { class: className, title } = Astro.props;
