--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 import '../assets/index.css';
 
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -13,31 +13,30 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-    <Header title={title} class="header" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>CSS data analysis - {title}</title>
+  </head>
+  <body>
+    <Header title="CSS data analysis" class="header" />
     <main class="main">
       <slot />
     </main>
     <Footer class="footer" />
-	</body>
+    <style>
+      .header,
+      .footer {
+        flex: 0 1 auto;
+      }
+
+      .main {
+        flex: 1 1 auto;
+
+        padding: 1rem 2rem;
+      }
+    </style>
+  </body>
 </html>
-
-<style>
-.header,
-.footer {
-  flex: 0 1 auto;
-}
-
-.main {
-  flex: 1 1 auto;
-
-  padding: 1rem 2rem;
-}
-</style>
