--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,8 +16,29 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+    <meta name="color-scheme" content="light dark" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <link rel="shortcut icon" href="/favicon.icon" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+    />
+
     <title>CSS data analysis - {title}</title>
   </head>
   <body>
@@ -26,18 +47,17 @@ const { title } = Astro.props;
       <slot />
     </main>
     <Footer class="footer" />
+    <style>
+      .header,
+      .footer {
+        flex: 0 1 auto;
+      }
+
+      .main {
+        flex: 1 1 auto;
+
+        padding: 1rem 2rem;
+      }
+    </style>
   </body>
 </html>
-
-<style>
-  .header,
-  .footer {
-    flex: 0 1 auto;
-  }
-
-  .main {
-    flex: 1 1 auto;
-
-    padding: 1rem 2rem;
-  }
-</style>
