--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -1,15 +1,5 @@
 /* colors */
 :root {
-  --cgd-color-light-contrast: #0b0b0b;
-  --cgd-color-dark-contrast: #f4f4f4;
-
-  --cgd-color-primary: #c2ea34;
-  --cgd-color-primary-rgb: 194, 234, 52;
-  --cgd-color-primary-contrast: var(--cgd-color-light-contrast);
-  --cgd-color-primary-contrast-rgb: 11, 11, 11;
-  --cgd-color-primary-shade: #61751a;
-  --cgd-color-primary-tint: #e1f59a;
-
   --cgd-color-gamma-950: #ffffff;
   --cgd-color-gamma-900: #f2f2f2;
   --cgd-color-gamma-850: #e4e4e4;
@@ -30,6 +20,22 @@
   --cgd-color-gamma-100: #1b1b1b;
   --cgd-color-gamma-050: #0d0d0d;
   --cgd-color-gamma-000: #000000;
+
+  --cgd-color-text-strong: var(--cgd-color-gamma-900);
+  --cgd-color-text-medium: var(--cgd-color-gamma-800);
+  --cgd-color-text-subtle: var(--cgd-color-gamma-650);
+  --cgd-color-text-acccent: var(--cgd-color-primary-tint);
+
+  --cgd-color-light-contrast: var(--cgd-color-gamma-050);
+  --cgd-color-dark-contrast: var(--cgd-color-gamma-900);
+
+  --cgd-color-primary: #c2ea34;
+  --cgd-color-primary-rgb: 194, 234, 52;
+  --cgd-color-primary-tint: #d6f178;
+  --cgd-color-primary-tone: #acc74d;
+  --cgd-color-primary-shade: #819c23;
+  --cgd-color-primary-contrast: var(--cgd-color-light-contrast);
+  --cgd-color-primary-contrast-rgb: 11, 11, 11;
 }
 
 /* foundation */
