--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,13 +14,13 @@ const { class: className } = Astro.props;
 
 <style>
   .footer {
-    padding: 1rem;
-    border-top: 1px solid #fff;
-
-    background: transparent;
+    padding: var(--cgd-space-100);
+    border-top: 1px solid var(--cgd-color-gamma-150);
   }
 
   .content {
     text-align: center;
+    font-size: var(--cgd-font-size-s);
+    color: var(--cgd-color-text-subtle);
   }
 </style>
