--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,8 +3,9 @@ html {
   flex-direction: column;
   min-height: 100%;
 
+  background-color: var(--cgd-color-gamma-050);
   font-family: system-ui, sans-serif;
-  background-color: #eee;
+  color: var(--cgd-color-text-medium);
 }
 
 body {
@@ -14,4 +15,12 @@ body {
 
   min-height: 100%;
   margin: 0;
+}
+
+a {
+  color: var(--cgd-color-primary);
+}
+
+a:hover {
+  color: var(--cgd-color-primary-tint);
 }
