--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
+import '../assets/theme.css';
 import '../assets/index.css';
 
 export interface Props {
@@ -56,7 +57,7 @@ const { title } = Astro.props;
       .main {
         flex: 1 1 auto;
 
-        padding: 1rem 2rem;
+        padding: var(--cgd-space-100) var(--cgd-side-gap);
       }
     </style>
   </body>
