--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -23,6 +23,7 @@ const { title } = Astro.props;
   .content {
     padding: var(--cgd-space-100);
 
+    background: var(--cgd-color-gamma-100);
     font-size: var(--cgd-font-size-n);
     border: 1px solid var(--cgd-color-primary-shade);
     border-radius: var(--cgd-radius-regular);
