--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,8 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-import '../assets/theme.css';
-import '../assets/index.css';
+import '../assets/css/theme.css';
+import '../assets/css/index.css';
 
 export interface Props {
   title: string;
