--- a/src/pages/graphs.astro
+++ b/src/pages/graphs.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Content from '../components/Content.astro';
+
+import { Graph } from '../client';
 ---
 
 <Layout title="Graphs">
-  <Content title="Graphs">
-    <div>🚧 Data visualization 🚧</div>
-  </Content>
+  <Graph title="Demo" client:load />
 </Layout>
