--- a/src/pages/graphs.astro
+++ b/src/pages/graphs.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Content from '../components/Content.astro';
 
-import { Graph } from '../client';
+import { Plots } from '../client';
 ---
 
 <Layout title="Graphs">
-  <Graph title="Demo" client:load />
+  <Plots client:load />
 </Layout>
