test graph data

--- a/src/pages/graphs.astro
+++ b/src/pages/graphs.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
 
-import { Plots } from '../client';
+import { Graphs } from '../client';
 ---
 
 <Layout title="Graphs">
-  <Plots client:load />
+  <Graphs client:load />
 </Layout>
