range component updated

--- a/src/pages/graphs.astro
+++ b/src/pages/graphs.astro
@@ -5,5 +5,5 @@ import { Graphs } from '../client';
 ---
 
 <Layout title="Graphs">
-  <Graphs client:load />
+  <Graphs client:only="solid" />
 </Layout>
