--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,5 @@
+@import "../../../node_modules/@shoelace-style/shoelace/dist/themes/dark.css";
+
 @font-face {
   font-family: 'Mona Sans';
   font-style: normal;
