--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -51,4 +51,9 @@ const { class: className, title } = Astro.props;
     font-size: var(--cgd-font-size-l);
     text-align: center;
   }
+
+  .menu nav {
+    display: flex;
+    gap: var(--cgd-space-100);
+  }
 </style>
