--- a/src/client/graphs/graphs-layout.module.css
+++ b/src/client/graphs/graphs-layout.module.css
@@ -8,6 +8,8 @@
   grid-template-columns: 1fr;
 }
 
-.isGrid {
-  grid-template-columns: 1fr 1fr;
+@media screen and (min-width: 780px) {
+  .isGrid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
