--- a/src/client/atoms/segment/segment.module.css
+++ b/src/client/atoms/segment/segment.module.css
@@ -1,3 +1,9 @@
+.section {
+  max-width: calc(900px + var(--cgd-side-gap) * 2);
+  margin: 0 auto;
+  width: 100%;
+}
+
 .header {
   display: grid;
   grid-template-columns: 1fr auto;
