--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const { class: className } = Astro.props;
 
 <footer class={`footer ${className}`}>
   <div class="content">
-    CSS analysis @ <a href="https://github.com/XOP" title="XOP Github">XOP</a> 2022
+    CSS data analysis @ <a href="https://github.com/XOP" title="XOP Github">XOP</a> 2019 - 2022
   </div>
 </footer>
 
