--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,6 +58,9 @@ const { title } = Astro.props;
         flex: 1 1 auto;
 
         padding: var(--cgd-space-100) var(--cgd-side-gap);
+        margin: 0 auto;
+        width: 100%;
+        max-width: calc(900px + var(--cgd-side-gap) * 2);
       }
     </style>
   </body>
