--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,6 +55,8 @@ const { title } = Astro.props;
       }
 
       .main {
+        box-sizing: border-box;
+
         flex: 1 1 auto;
 
         padding: var(--cgd-space-100) var(--cgd-side-gap);
